Fix the styling issues of number with unit input (#339)
**What was the change?**
Fix the width occupied by containing inputs of number with unit input
component so that they take up the container with and align with other
inputs

**Why was this change made?**
Number with unit inputs are misaligned right now

**Bug Number:**
https://jira.eng.vmware.com/browse/VDUCC-526

--- a/projects/components/src/form/number-with-unit-input/number-with-unit-form-input.component.scss
+++ b/projects/components/src/form/number-with-unit-input/number-with-unit-form-input.component.scss
@@ -1,5 +1,4 @@
 .clr-control-container .clr-input {
-    width: 5rem;
     margin-right: 5px;
 }
 
@@ -23,8 +22,8 @@ input[type='number'] {
     }
 }
 
-.clr-form-control .clr-control-container {
-    width: auto;
+div.clr-select-wrapper {
+    width: auto; // The width is being set to 100% else where making this div grow wider than necessary
     flex: 0 1 auto;
 }
 
